feat: add graphql code generator for tests

--- a/package.json
+++ b/package.json
@@ -11,12 +11,11 @@
     "install-all:shared": "cd shared && npm install",
     "install-all:worker": "cd worker && npm install",
     "install-all:www": "cd www && npm install",
-    "taito-init": "taito -z ${taito_options} init:${taito_env} && npm run import-db-data",
-    "taito-init:clean": "taito -z ${taito_options} init:${taito_env} --clean && npm run import-db-data && npm run clean:storage",
+    "taito-init": "taito -z ${taito_options} init:${taito_env} && npm run import-db-data && npm run generate",
+    "taito-init:clean": "taito -z ${taito_options} init:${taito_env} --clean && npm run import-db-data && npm run clean:storage && npm run generate",
     "import-db-data": "if [ -f ./database/data/${taito_env}.sql ]; then taito ${taito_options} db import:${taito_env} ./database/data/${taito_env}.sql; fi",
     "clean:storage": "if [ ${taito_env} = 'local' ] && [ -d storage ]; then echo Cleaning storage; rm -rf ./storage/bucket/*; rm -rf ./storage/.minio.sys/buckets/bucket/*/; fi",
-    "db-deploy": "npm run generate-db-classes",
-    "generate-db-classes": "if [ ${taito_env} = 'local' ] && [ -f ./server/generate ]; then taito ${taito_options} exec:server ./generate; fi",
+    "generate": "if [ ${taito_env} = 'local' ] && [ -f ./server/generate.sh ]; then taito ${taito_options} exec:server ./generate.sh; else echo Nothing to generate; fi",
     "info:local": "yes | taito ${taito_options} secret show:${taito_env}",
     "info": "yes | taito ${taito_options} secret show:${taito_env} basic-auth",
     "lint": "echo Running lint locally && npm-run-all --parallel lint:admin lint:client lint:server lint:worker lint:www ",
