--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "full-stack-template",
   "scripts": {
+    "preinstall": "if [ -f package-lock.json ]; then npx npm-force-resolutions; fi",
     "install-clean": "echo '# Nothing to cleanup'",
     "install-ci": "npm-run-all install-all:shared",
     "install-dev": "echo '# Installing all libraries on host for code editor support. TODO how to minimize as --only=dev affects devDepencies also?' && npm run install-all",
@@ -154,6 +155,9 @@
     "git-branch-is": "^4.0.0",
     "husky": "^6.0.0",
     "npm-run-all": "^4.1.5",
-    "semantic-release": "^16.0.4"
+    "semantic-release": "^17.4.3"
+  },
+  "resolutions": {
+    "npm": "^6.14.13"
   }
 }
