--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "aws-sdk": "^2.807.0",
     "axios": "^0.21.0",
     "bunyan": "^1.8.14",
+    "class-validator": "^0.13.1",
     "graphql": "^15.5.0",
     "koa": "^2.13.0",
     "koa-joi-router": "^8.0.0",
