fix: server typescript and lint issues

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -4,14 +4,15 @@
     "module": "commonjs",
     "strict": true,
     "esModuleInterop": true,
-    "typeRoots": ["./src/common/vendor/types", "./node_modules/@types"],
+    "typeRoots": ["./src/common/typings", "./node_modules/@types"],
     "outDir": "../build",
     "sourceMap": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
     "strictPropertyInitialization": false,
     "emitDecoratorMetadata": true,
-    "experimentalDecorators": true
+    "experimentalDecorators": true,
+    "skipLibCheck": true
   },
   "include": ["shared/**/*.ts", "src/**/*.ts", "index.ts", "test/**/*.ts"]
 }
