--- a/server/package.json
+++ b/server/package.json
@@ -18,63 +18,63 @@
   "_comment3": "Required by REST API docs only: mustache, showdown",
   "_comment4": "Required by GraphQL API only: apollo-server-koa, graphql, type-graphql",
   "dependencies": {
-    "@hapi/boom": "^9.1.0",
-    "@sentry/node": "^6.5.0",
-    "apollo-server-koa": "^2.25.0",
-    "aws-sdk": "^2.807.0",
-    "axios": "^0.21.0",
-    "bunyan": "^1.8.14",
-    "class-validator": "^0.13.1",
-    "graphql": "^15.5.0",
-    "koa": "^2.13.0",
-    "koa-joi-router": "^8.0.0",
-    "koa-qs": "^3.0.0",
-    "mustache": "^4.1.0",
-    "pg-promise": "^10.8.1",
-    "reflect-metadata": "^0.1.13",
-    "serverless-http": "^2.5.0",
-    "showdown": "^1.9.1",
+    "@hapi/boom": "9.1.0",
+    "@sentry/node": "6.5.0",
+    "apollo-server-koa": "2.25.0",
+    "aws-sdk": "2.807.0",
+    "axios": "0.21.0",
+    "bunyan": "1.8.14",
+    "class-validator": "0.13.1",
+    "graphql": "15.5.0",
+    "koa": "2.13.0",
+    "koa-joi-router": "8.0.0",
+    "koa-qs": "3.0.0",
+    "mustache": "4.1.0",
+    "pg-promise": "10.8.1",
+    "reflect-metadata": "0.1.13",
+    "serverless-http": "2.5.0",
+    "showdown": "1.9.1",
     "stack-trace": "0.0.10",
-    "type-graphql": "^1.1.1",
-    "typedi": "^0.10.0",
-    "uuid": "^8.3.2"
+    "type-graphql": "1.1.1",
+    "typedi": "0.10.0",
+    "uuid": "8.3.2"
   },
   "resolutions": {
-    "qs": "~6.3.2"
+    "qs": "6.3.2"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "1.21.3",
     "@graphql-codegen/introspection": "1.18.1",
     "@graphql-codegen/typescript": "1.21.1",
-    "@graphql-codegen/typescript-graphql-request": "^3.1.0",
-    "@graphql-codegen/typescript-operations": "^1.17.15",
+    "@graphql-codegen/typescript-graphql-request": "3.1.0",
+    "@graphql-codegen/typescript-operations": "1.17.15",
     "@graphql-codegen/typescript-resolvers": "1.19.0",
     "@types/bunyan": "1.8.6",
-    "@types/jest": "^26.0.18",
-    "@types/joi": "^17.2.3",
-    "@types/koa": "^2.11.3",
-    "@types/koa-joi-router": "^8.0.0",
+    "@types/jest": "26.0.18",
+    "@types/joi": "17.2.3",
+    "@types/koa": "2.13.3",
+    "@types/koa-joi-router": "8.0.0",
     "@types/koa-qs": "2.0.0",
-    "@types/koa-router": "^7.4.1",
-    "@types/mustache": "^4.1.0",
-    "@types/node": "^15.6.1",
-    "@types/pg": "^8.6.0",
+    "@types/koa-router": "7.4.2",
+    "@types/mustache": "4.1.0",
+    "@types/node": "15.6.1",
+    "@types/pg": "8.6.0",
     "@types/showdown": "1.9.3",
     "@types/stack-trace": "0.0.29",
-    "@types/uuid": "^8.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.9.1",
-    "@typescript-eslint/parser": "^4.9.1",
-    "eslint": "^7.15.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-config-standard": "^16.0.2",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.2.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "jest": "^27.0.3",
-    "prettier": "^2.2.1",
-    "ts-jest": "^27.0.2",
-    "ts-node-dev": "^1.1.0",
-    "typescript": "^4.1.2"
+    "@types/uuid": "8.0.0",
+    "@typescript-eslint/eslint-plugin": "4.9.1",
+    "@typescript-eslint/parser": "4.9.1",
+    "eslint": "7.15.0",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-config-standard": "16.0.2",
+    "eslint-plugin-import": "2.22.0",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-prettier": "3.2.0",
+    "eslint-plugin-promise": "5.1.0",
+    "jest": "27.0.3",
+    "prettier": "2.2.1",
+    "ts-jest": "27.0.2",
+    "ts-node-dev": "1.1.6",
+    "typescript": "4.3.2"
   }
 }
