--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "taito-init:clean": "taito -z ${taito_options} init:${taito_env} --clean && npm run import-db-data && npm run clean:storage && npm run generate",
     "import-db-data": "if [ -f ./database/data/${taito_env}.sql ]; then taito ${taito_options} db import:${taito_env} ./database/data/${taito_env}.sql; fi",
     "clean:storage": "if [ ${taito_env} = 'local' ] && [ -d storage ]; then echo Cleaning storage; rm -rf ./storage/bucket/*; rm -rf ./storage/.minio.sys/buckets/bucket/*/; fi",
-    "generate": "npm-run-all --parallel generate:client generate:server",
-    "generate:client": "if [ ${taito_env} = 'local' ] && [ -f ./client/generate.sh ]; then taito ${taito_options} exec:client ./generate.sh; else echo Nothing to generate; fi",
-    "generate:server": "if [ ${taito_env} = 'local' ] && [ -f ./server/generate.sh ]; then taito ${taito_options} exec:server ./generate.sh; else echo Nothing to generate; fi",
+    "generate": "npm-run-all generate:server generate:client ",
+    "generate:client": "if [ ${taito_env} = 'local' ] && [ -f ./client/generate.sh ]; then (cd client && ./generate.sh); else echo Nothing to generate; fi",
+    "generate:server": "if [ ${taito_env} = 'local' ] && [ -f ./server/generate.sh ]; then (cd server && ./generate.sh); else echo Nothing to generate; fi",
     "info:local": "yes | taito ${taito_options} secret show:${taito_env}",
     "info": "yes | taito ${taito_options} secret show:${taito_env} basic-auth",
     "lint": "echo Running lint locally && npm-run-all --parallel lint:admin lint:client lint:server lint:worker lint:www ",
