--- a/alternatives/server-flask/Dockerfile
+++ b/alternatives/server-flask/Dockerfile
@@ -1,5 +1,5 @@
 # Builder, tester and runtime container for local development
-FROM python:3.9-alpine
+FROM python:3.9-alpine3.13
 ENV NODE_ENV development
 ENV FLASK_ENV development
 ENV FLASK_APP src
