--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -51,9 +51,11 @@ services:
       - default
     ports:
       - "8080"
+      - "127.0.0.1:9996:9996"
+      - "127.0.0.1:9997:9997"
       - "127.0.0.1:9998:9998"
     sysctls:
-      net.ipv4.ip_local_port_range: "9998 9998" # Enforce all random http ports to be 9998 (used in webpack lazy compilation)
+      net.ipv4.ip_local_port_range: "9996 9998" # Enforce all random http ports to be 9996 9998 (used in webpack lazy compilation, etc.)
     volumes:
       - "./client:/develop:delegated"
       - "./shared:/develop/shared:delegated"
