--- a/scripts/terraform.yaml
+++ b/scripts/terraform.yaml
@@ -62,8 +62,8 @@ settings:
         SENTRY_DSN: #sentryDSN
         DATABASE_HOST: '${db_database_real_host}'
         DATABASE_PORT: '${db_database_real_port}'
-        DATABASE_SSL_ENABLED: ${db_database_ssl_enabled}
-        DATABASE_SSL_SERVER_CERT_ENABLED: ${db_database_ssl_server_cert_enabled}
+        DATABASE_SSL_ENABLED: "${db_database_ssl_enabled}"
+        DATABASE_SSL_SERVER_CERT_ENABLED: "${db_database_ssl_server_cert_enabled}"
         DATABASE_NAME: ${db_database_name}
         DATABASE_USER: ${db_database_app_username}
         DATABASE_POOL_MIN: '5'
