--- a/docker-nginx.conf
+++ b/docker-nginx.conf
@@ -31,25 +31,25 @@ http {
         # auth_basic              "basic";
         # auth_basic_user_file    /run/secrets/BASIC_AUTH_HTPASSWD;
 
-        # location /admin {
-        #     client_max_body_size 1k;
+        location /admin {
+            client_max_body_size 1k;
 
-        #     proxy_pass http://full-stack-template-admin:8080;
-        #     proxy_http_version 1.1;
+            proxy_pass http://full-stack-template-admin:8080;
+            proxy_http_version 1.1;
 
-        #     # Remove /admin from path
-        #     rewrite ^/admin/?(.*) /$1 break;
+            # Remove /admin from path
+            rewrite ^/admin/?(.*) /$1 break;
 
-        #     proxy_redirect off;
+            proxy_redirect off;
 
-        #     # Headers
-        #     proxy_set_header X-Real-IP $remote_addr;
-        #     proxy_set_header X-Forwarded-For $remote_addr;
-        #     proxy_set_header Upgrade $http_upgrade;
-        #     proxy_set_header Connection 'upgrade';
-        #     proxy_set_header Host $host;
-        #     proxy_cache_bypass $http_upgrade;
-        # }
+            # Headers
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $remote_addr;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
 
         location / {
             client_max_body_size 1k;
@@ -88,41 +88,41 @@ http {
             proxy_cache_bypass $http_upgrade;
         }
 
-        # location /minio {
-        #     client_max_body_size 32m;
+        location /minio {
+            client_max_body_size 32m;
 
-        #     proxy_pass http://full-stack-template-storage:9000;
-        #     proxy_http_version 1.1;
+            proxy_pass http://full-stack-template-storage:9000;
+            proxy_http_version 1.1;
 
-        #     proxy_redirect off;
+            proxy_redirect off;
 
-        #     # Headers
-        #     proxy_set_header X-Real-IP  $remote_addr;
-        #     proxy_set_header X-Forwarded-For $remote_addr;
-        #     proxy_set_header Upgrade $http_upgrade;
-        #     proxy_set_header Connection 'upgrade';
-        #     proxy_set_header Host $http_host;
-        #     proxy_cache_bypass $http_upgrade;
-        # }
+            # Headers
+            proxy_set_header X-Real-IP  $remote_addr;
+            proxy_set_header X-Forwarded-For $remote_addr;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $http_host;
+            proxy_cache_bypass $http_upgrade;
+        }
 
-        # location /docs {
-        #     client_max_body_size 1k;
+        location /docs {
+            client_max_body_size 1k;
 
-        #     proxy_pass http://full-stack-template-www:8080;
-        #     proxy_http_version 1.1;
+            proxy_pass http://full-stack-template-www:8080;
+            proxy_http_version 1.1;
 
-        #     # Remove /docs from path
-        #     rewrite ^/docs/?(.*) /$1 break;
+            # Remove /docs from path
+            rewrite ^/docs/?(.*) /$1 break;
 
-        #     proxy_redirect off;
+            proxy_redirect off;
 
-        #     # Headers
-        #     proxy_set_header X-Real-IP $remote_addr;
-        #     proxy_set_header X-Forwarded-For $remote_addr;
-        #     proxy_set_header Upgrade $http_upgrade;
-        #     proxy_set_header Connection 'upgrade';
-        #     proxy_set_header Host $host;
-        #     proxy_cache_bypass $http_upgrade;
-        # }
+            # Headers
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $remote_addr;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
     }
 }
