feat(server-django): use debugpy, remove wheel

--- a/alternatives/server-django/Dockerfile
+++ b/alternatives/server-django/Dockerfile
@@ -1,6 +1,5 @@
 # Builder, tester and runtime container for local development
 FROM python:3.9-alpine3.13
-ENV PYTHONPATH /usr/local/lib/python3.9/site-packages
 ENV NODE_ENV development
 ENV DJANGO_ENV development
 ENV DJANGO_APP src
@@ -15,9 +14,14 @@ RUN mkdir -p /develop
 WORKDIR /develop
 
 ARG SERVICE_DIR=.
+
 COPY ${SERVICE_DIR}/requirements-dev.txt /develop/
-RUN pip3 install --upgrade pip pip-tools
+RUN pip3 install --upgrade pip pip-tools debugpy
 RUN pip3 install -r requirements-dev.txt
 
 EXPOSE 8080
-CMD sleep 2; python3 src/manage.py runserver 0.0.0.0:8080
+CMD pip-compile requirements-dev.in; \
+    pip-compile requirements-prod.in; \
+    pip3 install -r requirements-dev.txt; \
+    python -m debugpy --listen 0.0.0.0:9229 -m \
+      src/manage.py runserver 0.0.0.0:8080
