feat(server-flask): use debugpy, remove wheel

--- a/alternatives/server-flask/Dockerfile
+++ b/alternatives/server-flask/Dockerfile
@@ -14,9 +14,14 @@ RUN mkdir -p /develop
 WORKDIR /develop
 
 ARG SERVICE_DIR=.
+
 COPY ${SERVICE_DIR}/requirements-dev.txt /develop/
-RUN pip3 install --upgrade pip pip-tools
-RUN pip3 install -r requirements-dev.txt && pip3 install ptvsd
+RUN pip3 install --upgrade pip pip-tools debugpy
+RUN pip3 install -r requirements-dev.txt
 
 EXPOSE 8080
-CMD python -m ptvsd --host 0.0.0.0 --port 9229 -m flask run --host $API_BINDADDR --port $API_PORT --no-debugger
+CMD pip-compile requirements-dev.in; \
+    pip-compile requirements-prod.in; \
+    pip3 install -r requirements-dev.txt; \
+    python -m debugpy --listen 0.0.0.0:9229 -m \
+      flask run --host $API_BINDADDR --port $API_PORT --no-debugger
