chore(client): update dependencies

--- a/client/.babelrc
+++ b/client/.babelrc
@@ -5,8 +5,8 @@
       {
         "targets": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"],
         "useBuiltIns": "usage",
-        "corejs": "3.14",
-        "bugfixes": true // https://babeljs.io/docs/en/babel-preset-env#bugfixes
+        "corejs": "3.17",
+        "bugfixes": true
       }
     ],
     "@babel/preset-typescript",
