--- a/client/package.json
+++ b/client/package.json
@@ -19,107 +19,107 @@
     "generate:graphql": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
-    "@apollo/client": "3.3.20",
+    "@apollo/client": "3.4.10",
     "@lingui/macro": "3.10.2",
     "@lingui/react": "3.10.2",
     "@loadable/component": "5.15.0",
-    "@sentry/browser": "6.7.1",
-    "axios": "0.21.1",
-    "date-fns": "2.22.1",
+    "@sentry/browser": "6.12.0",
+    "axios": "0.21.3",
+    "date-fns": "2.23.0",
     "framer-motion": "4.1.17",
-    "graphql": "15.5.0",
-    "history": "5.0.0",
+    "graphql": "15.5.3",
+    "history": "5.0.1",
     "lodash": "4.17.21",
-    "make-plural": "6.2.2",
+    "make-plural": "7.0.0",
     "react": "17.0.2",
-    "react-aria": "3.7.0",
+    "react-aria": "3.9.0",
     "react-dom": "17.0.2",
-    "react-hot-toast": "2.0.0",
+    "react-hot-toast": "2.1.1",
     "react-icons": "4.2.0",
     "react-merge-refs": "1.1.0",
-    "react-router": "6.0.0-beta.0",
-    "react-router-dom": "6.0.0-beta.0",
-    "react-stately": "3.6.0",
-    "react-use": "17.2.4",
-    "styled-components": "5.3.0",
-    "workbox-window": "6.1.5"
+    "react-router": "6.0.0-beta.3",
+    "react-router-dom": "6.0.0-beta.3",
+    "react-stately": "3.8.0",
+    "react-use": "17.3.1",
+    "styled-components": "5.3.1",
+    "workbox-window": "6.2.4"
   },
   "devDependencies": {
-    "@babel/cli": "7.14.5",
-    "@babel/core": "7.14.6",
+    "@babel/cli": "7.15.4",
+    "@babel/core": "7.15.5",
     "@babel/plugin-proposal-class-properties": "7.14.5",
-    "@babel/plugin-proposal-object-rest-spread": "7.14.5",
+    "@babel/plugin-proposal-object-rest-spread": "7.14.7",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
-    "@babel/preset-env": "7.14.5",
+    "@babel/preset-env": "7.15.4",
     "@babel/preset-react": "7.14.5",
-    "@babel/preset-typescript": "7.14.5",
-    "@graphql-codegen/cli": "1.21.5",
-    "@graphql-codegen/typescript": "1.22.2",
-    "@graphql-codegen/typescript-operations": "1.18.1",
-    "@graphql-codegen/typescript-react-apollo": "2.2.6",
+    "@babel/preset-typescript": "7.15.0",
+    "@graphql-codegen/cli": "2.1.1",
+    "@graphql-codegen/typescript": "2.2.0",
+    "@graphql-codegen/typescript-operations": "2.1.3",
+    "@graphql-codegen/typescript-react-apollo": "3.1.3",
     "@lingui/cli": "3.10.2",
     "@lingui/loader": "3.10.2",
-    "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
-    "@storybook/addon-actions": "6.3.0-beta.13",
-    "@storybook/addon-essentials": "6.3.0-beta.13",
-    "@storybook/addon-links": "6.3.0-beta.13",
-    "@storybook/addons": "6.3.0-beta.13",
-    "@storybook/builder-webpack5": "6.3.0-beta.13",
-    "@storybook/manager-webpack5": "6.3.0-beta.13",
-    "@storybook/react": "6.3.0-beta.13",
-    "@testing-library/jest-dom": "5.13.0",
-    "@testing-library/react": "11.2.7",
-    "@testing-library/user-event": "13.1.9",
-    "@types/jest": "26.0.23",
-    "@types/loadable__component": "5.13.3",
-    "@types/lodash": "4.14.170",
+    "@pmmmwh/react-refresh-webpack-plugin": "0.5.0-rc.6",
+    "@storybook/addon-actions": "6.3.8",
+    "@storybook/addon-essentials": "6.3.8",
+    "@storybook/addon-links": "6.3.8",
+    "@storybook/addons": "6.3.8",
+    "@storybook/builder-webpack5": "6.3.8",
+    "@storybook/manager-webpack5": "6.3.8",
+    "@storybook/react": "6.3.8",
+    "@testing-library/jest-dom": "5.14.1",
+    "@testing-library/react": "12.0.0",
+    "@testing-library/user-event": "13.2.1",
+    "@types/jest": "27.0.1",
+    "@types/loadable__component": "5.13.4",
+    "@types/lodash": "4.14.172",
     "@types/node": "15.12.0",
-    "@types/react": "17.0.11",
-    "@types/react-dom": "17.0.8",
-    "@types/react-router-dom": "5.1.7",
-    "@types/styled-components": "5.1.10",
-    "@typescript-eslint/eslint-plugin": "4.28.0",
-    "@typescript-eslint/parser": "4.28.0",
+    "@types/react": "17.0.20",
+    "@types/react-dom": "17.0.9",
+    "@types/react-router-dom": "5.1.8",
+    "@types/styled-components": "5.1.14",
+    "@typescript-eslint/eslint-plugin": "4.30.0",
+    "@typescript-eslint/parser": "4.30.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-loader": "8.2.2",
     "babel-plugin-dynamic-import-node": "2.3.3",
     "babel-plugin-lodash": "3.3.4",
     "babel-plugin-macros": "3.1.0",
-    "babel-plugin-styled-components": "1.12.0",
+    "babel-plugin-styled-components": "1.13.2",
     "babel-plugin-syntax-class-properties": "6.13.0",
     "babel-plugin-transform-remove-console": "6.9.4",
-    "clean-webpack-plugin": "4.0.0-alpha.0",
-    "core-js": "3.14.0",
-    "css-loader": "5.2.6",
+    "clean-webpack-plugin": "4.0.0",
+    "core-js": "3.17.2",
+    "css-loader": "6.2.0",
     "cypress": "8.3.0",
-    "eslint": "7.29.0",
+    "eslint": "7.32.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-config-standard": "16.0.3",
-    "eslint-plugin-import": "2.23.4",
-    "eslint-plugin-lodash": "7.2.0",
+    "eslint-plugin-import": "2.24.2",
+    "eslint-plugin-lodash": "7.3.0",
     "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-prettier": "3.4.0",
+    "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-promise": "5.1.0",
-    "eslint-plugin-react": "7.24.0",
+    "eslint-plugin-react": "7.25.1",
     "eslint-plugin-react-hooks": "4.2.0",
     "favicons": "6.2.2",
     "favicons-webpack-plugin": "5.0.2",
-    "fork-ts-checker-webpack-plugin": "6.2.10",
-    "html-webpack-plugin": "5.3.1",
-    "jest": "27.0.4",
+    "fork-ts-checker-webpack-plugin": "6.3.3",
+    "html-webpack-plugin": "5.3.2",
+    "jest": "27.1.0",
     "lodash-webpack-plugin": "0.11.6",
-    "mini-css-extract-plugin": "1.6.0",
-    "pg-promise": "10.10.2",
-    "prettier": "2.3.1",
+    "mini-css-extract-plugin": "2.2.2",
+    "pg-promise": "10.11.0",
+    "prettier": "2.3.2",
     "react-refresh": "0.10.0",
     "source-map-loader": "3.0.0",
     "storybook-dark-mode": "1.0.8",
-    "style-loader": "2.0.0",
-    "typescript": "4.3.4",
-    "webpack": "5.39.1",
+    "style-loader": "3.2.1",
+    "typescript": "4.4.2",
+    "webpack": "5.52.0",
     "webpack-bundle-analyzer": "4.4.2",
-    "webpack-cli": "4.7.2",
-    "webpack-dev-server": "3.11.2",
+    "webpack-cli": "4.8.0",
+    "webpack-dev-server": "4.1.0",
     "workbox-webpack-plugin": "6.2.4"
   },
   "lingui": {
