--- a/server/package.json
+++ b/server/package.json
@@ -19,21 +19,21 @@
   "_comment3": "Required by REST API docs only: mustache, showdown",
   "_comment4": "Required by GraphQL API only: apollo-server-koa, graphql, type-graphql",
   "dependencies": {
-    "@hapi/boom": "^9.1.2",
-    "@sentry/node": "^6.7.2",
-    "apollo-server-koa": "^2.25.1",
-    "aws-sdk": "^2.932.0",
-    "axios": "^0.21.1",
-    "bunyan": "^1.8.15",
+    "@hapi/boom": "9.1.2",
+    "@sentry/node": "6.7.2",
+    "apollo-server-koa": "2.25.1",
+    "aws-sdk": "2.932.0",
+    "axios": "0.21.1",
+    "bunyan": "1.8.15",
     "class-validator": "0.13.1",
-    "graphql": "^15.5.1",
-    "koa": "^2.13.1",
+    "graphql": "15.5.1",
+    "koa": "2.13.1",
     "koa-joi-router": "8.0.0",
     "koa-qs": "3.0.0",
-    "mustache": "^4.2.0",
-    "pg-promise": "^10.10.2",
+    "mustache": "4.2.0",
+    "pg-promise": "10.10.2",
     "reflect-metadata": "0.1.13",
-    "serverless-http": "^2.7.0",
+    "serverless-http": "2.7.0",
     "showdown": "1.9.1",
     "stack-trace": "0.0.10",
     "type-graphql": "1.1.1",
@@ -44,39 +44,39 @@
     "qs": "6.3.2"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^1.21.5",
-    "@graphql-codegen/introspection": "^1.18.2",
-    "@graphql-codegen/typescript": "^1.22.3",
-    "@graphql-codegen/typescript-graphql-request": "^3.2.3",
-    "@graphql-codegen/typescript-operations": "^1.18.2",
-    "@graphql-codegen/typescript-resolvers": "^1.19.4",
+    "@graphql-codegen/cli": "1.21.5",
+    "@graphql-codegen/introspection": "1.18.2",
+    "@graphql-codegen/typescript": "1.22.3",
+    "@graphql-codegen/typescript-graphql-request": "3.2.3",
+    "@graphql-codegen/typescript-operations": "1.18.2",
+    "@graphql-codegen/typescript-resolvers": "1.19.4",
     "@types/bunyan": "1.8.6",
-    "@types/jest": "^26.0.23",
+    "@types/jest": "26.0.23",
     "@types/joi": "17.2.3",
     "@types/koa": "2.13.3",
     "@types/koa-joi-router": "8.0.0",
     "@types/koa-qs": "2.0.0",
     "@types/koa-router": "7.4.2",
-    "@types/mustache": "^4.1.1",
-    "@types/node": "^15.12.4",
+    "@types/mustache": "4.1.1",
+    "@types/node": "15.12.4",
     "@types/pg": "8.6.0",
     "@types/showdown": "1.9.3",
     "@types/stack-trace": "0.0.29",
-    "@types/uuid": "^8.3.0",
-    "@typescript-eslint/eslint-plugin": "^4.28.0",
-    "@typescript-eslint/parser": "^4.28.0",
-    "eslint": "^7.29.0",
+    "@types/uuid": "8.3.0",
+    "@typescript-eslint/eslint-plugin": "4.28.0",
+    "@typescript-eslint/parser": "4.28.0",
+    "eslint": "7.29.0",
     "eslint-config-prettier": "8.3.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.23.4",
+    "eslint-config-standard": "16.0.3",
+    "eslint-plugin-import": "2.23.4",
     "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-prettier": "3.4.0",
     "eslint-plugin-promise": "5.1.0",
-    "gqlg": "^1.0.2",
-    "jest": "^27.0.5",
-    "prettier": "^2.3.1",
-    "ts-jest": "^27.0.3",
+    "gqlg": "1.0.2",
+    "jest": "27.0.5",
+    "prettier": "2.3.1",
+    "ts-jest": "27.0.3",
     "ts-node-dev": "1.1.6",
-    "typescript": "^4.3.4"
+    "typescript": "4.3.4"
   }
 }
