--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "@lingui/react": "3.10.2",
     "@loadable/component": "5.15.0",
     "@sentry/browser": "6.12.0",
+    "apollo3-cache-persist": "0.12.1",
     "axios": "0.21.3",
     "date-fns": "2.23.0",
     "framer-motion": "4.1.17",
