--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -264,8 +264,8 @@ services:
       - "9000"
       - "8888:8888"
     environment:
-      MINIO_ACCESS_KEY: minio
-      MINIO_SECRET_KEY: ${taito_default_password}
+      MINIO_ROOT_USER: minio
+      MINIO_ROOT_PASSWORD: ${taito_default_password}
       # Subpath not yet supported: https://github.com/minio/minio/issues/12727
       # MINIO_BROWSER_REDIRECT_URL: http://localhost:9999/minio
 
