fix: use npm-run-all to avoid local npm version mismatch

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "install-clean": "echo '# Nothing to cleanup'",
     "install-ci": "npm-run-all install-all:shared",
-    "install-dev": "echo '# Installing all libraries on host for code editor support. TODO how to minimize as --only=dev affects devDepencies also?' && npm run install-all",
+    "install-dev": "echo '# Installing all libraries on host for code editor support. TODO how to minimize as --only=dev affects devDepencies also?' && npm-run-all install-all",
     "install-all": "npm-run-all install-all:admin install-all:client install-all:shared install-all:server install-all:worker install-all:www ",
     "install-all:admin": "cd admin && npm install",
     "install-all:client": "cd client && npm install --legacy-peer-deps",
@@ -11,8 +11,8 @@
     "install-all:shared": "cd shared && npm install",
     "install-all:worker": "cd worker && npm install",
     "install-all:www": "cd www && npm install",
-    "taito-init": "taito -z ${taito_options} init:${taito_env} && npm run import-db-data && npm run generate",
-    "taito-init:clean": "taito -z ${taito_options} init:${taito_env} --clean && npm run import-db-data && npm run clean:storage && npm run generate",
+    "taito-init": "taito -z ${taito_options} init:${taito_env} && npm-run-all import-db-data generate",
+    "taito-init:clean": "taito -z ${taito_options} init:${taito_env} --clean && npm-run-all import-db-data clean:storage generate",
     "import-db-data": "if [ -f ./database/data/${taito_env}.sql ]; then taito ${taito_options} db import:${taito_env} ./database/data/${taito_env}.sql; fi",
     "clean:storage": "if [ ${taito_env} = 'local' ] && [ -d storage ]; then echo Cleaning storage; rm -rf ./storage/bucket/*; rm -rf ./storage/.minio.sys/buckets/bucket/*/; fi",
     "generate": "npm-run-all generate:server generate:client ",
@@ -21,30 +21,30 @@
     "info:local": "yes | taito ${taito_options} secret show:${taito_env}",
     "info": "yes | taito ${taito_options} secret show:${taito_env} basic-auth",
     "lint": "echo Running lint locally && npm-run-all --parallel lint:admin lint:client lint:server lint:worker lint:www ",
-    "lint:admin": "cd admin && npm run lint",
-    "lint:client": "cd client && npm run lint",
-    "lint:server": "cd server && npm run lint",
-    "lint:worker": "cd worker && npm run lint",
-    "lint:www": "cd www && npm run lint",
+    "lint:admin": "cd admin && npm-run-all lint",
+    "lint:client": "cd client && npm-run-all lint",
+    "lint:server": "cd server && npm-run-all lint",
+    "lint:worker": "cd worker && npm-run-all lint",
+    "lint:www": "cd www && npm-run-all lint",
     "unit": "echo Running unit tests locally && npm-run-all --parallel unit:admin unit:client unit:server unit:worker unit:www ",
-    "unit:admin": "cd admin && npm run unit",
-    "unit:client": "cd client && npm run unit",
-    "unit:server": "cd server && npm run unit",
-    "unit:worker": "cd worker && npm run unit",
-    "unit:www": "cd www && npm run unit",
+    "unit:admin": "cd admin && npm-run-all unit",
+    "unit:client": "cd client && npm-run-all unit",
+    "unit:server": "cd server && npm-run-all unit",
+    "unit:worker": "cd worker && npm-run-all unit",
+    "unit:www": "cd www && npm-run-all unit",
     "test": "npm-run-all test:admin test:client test:server test:worker test:www ",
     "test:admin": "taito ${taito_options} util test:admin:${taito_env}",
     "test:client": "taito ${taito_options} util test:client:${taito_env}",
     "test:server": "taito ${taito_options} util test:server:${taito_env}",
     "test:worker": "echo DISABLED taito ${taito_options} util test:worker:${taito_env}",
     "test:www": "echo DISABLED taito ${taito_options} util test:www:${taito_env}",
-    "taito-host-cypress": "npm run taito-host-cypress:client",
-    "taito-host-cypress:client": "cd client && DATABASE_PASSWORD=$test_all_DATABASE_PASSWORD npm run cypress:open",
-    "taito-host-cypress:admin": "cd admin && DATABASE_PASSWORD=$test_all_DATABASE_PASSWORD npm run cypress:open",
+    "taito-host-cypress": "npm-run-all taito-host-cypress:client",
+    "taito-host-cypress:client": "cd client && DATABASE_PASSWORD=$test_all_DATABASE_PASSWORD npm-run-all cypress:open",
+    "taito-host-cypress:admin": "cd admin && DATABASE_PASSWORD=$test_all_DATABASE_PASSWORD npm-run-all cypress:open",
     "code-check": "docker run --interactive --tty --rm --env CODECLIMATE_CODE=\"$PWD\" --volume \"$PWD\":/code --volume /var/run/docker.sock:/var/run/docker.sock --volume /tmp/cc:/tmp/cc codeclimate/codeclimate engines:install && docker run --interactive --tty --rm --env CODECLIMATE_CODE=\"$PWD\" --volume \"$PWD\":/code --volume /var/run/docker.sock:/var/run/docker.sock --volume /tmp/cc:/tmp/cc codeclimate/codeclimate analyze",
-    "taito-host-code-check": "npm run code-check",
+    "taito-host-code-check": "npm-run-all code-check",
     "_dep-check_comment": "TODO how to pass -u argument from dep-check to dep-check:TARGET?",
-    "dep-check": "npm-run-all \"dep-check:root {@}\" \"dep-check:admin {@}\" \"dep-check:client {@}\" \"dep-check:server {@}\" \"dep-check:worker {@}\" \"dep-check:www {@}\" -- ",
+    "dep-check": "npm run \"dep-check:root {@}\" \"dep-check:admin {@}\" \"dep-check:client {@}\" \"dep-check:server {@}\" \"dep-check:worker {@}\" \"dep-check:www {@}\" -- ",
     "dep-check:root": "npm run _dep-check-script -- . ",
     "dep-check:admin": "npm run _dep-check-script -- admin ",
     "dep-check:client": "npm run _dep-check-script -- client ",
@@ -53,7 +53,7 @@
     "dep-check:www": "npm run _dep-check-script -- www ",
     "dep-check-www-site": "npm run _dep-check-script -- www/site ",
     "_dep-check-script": "sh -c 'echo --- ${0} --- && cd ${0} && (npm-check ${@} || :) && echo && echo \"NOTE: Many of the devDependencies and ~ references are actually in use even if reported unused. But all unused dependencies can usually be removed from package.json.\" && echo' ",
-    "size-check": "npm-run-all \"size-check:admin {@}\" \"size-check:client {@}\" -- ",
+    "size-check": "npm run \"size-check:admin {@}\" \"size-check:client {@}\" -- ",
     "size-check:admin": "cd admin && echo --- admin --- && npm run analyze -- ",
     "size-check:client": "cd client && echo --- client --- && npm run analyze -- ",
     "project-show": "cat PROJECT.md | sed -n -e '/^## Contacts.*$/,/^#.*$/{ /^## Contacts.*$/d; /^#.*$/d; p; }'",
@@ -65,7 +65,7 @@
   "husky": {
     "hooks": {
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "pre-commit": "if [ \"$taito_mode\" != 'ci' ]; then npm run precommit:branch && npm run precommit:lint; fi",
+      "pre-commit": "if [ \"$taito_mode\" != 'ci' ]; then npm-run-all precommit:branch precommit:lint; fi",
       "pre-push": "if [ \"$taito_mode\" != 'ci' ]; then npm-run-all --parallel generate lint unit; fi"
     }
   },
