docs: add more terraform examples

--- a/scripts/terraform.yaml
+++ b/scripts/terraform.yaml
@@ -1,7 +1,7 @@
 # Here you can configure all your cloud resources (non-Kubernetes resources)
 # with a cloud-agnostic and developer-friendly YAML format
 
-# NOTE: terraform/examples.yaml for some examples.
+# NOTE: See terraform/examples.yaml for some examples.
 
 settings:
   backupEnabled: false
