chore: remove obsolete --legacy-peer-deps

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "install-dev": "echo '# Installing all libraries on host for code editor support. TODO how to minimize as --only=dev affects devDepencies also?' && npm-run-all install-all",
     "install-all": "npm-run-all install-all:admin install-all:client install-all:shared install-all:server install-all:worker install-all:www ",
     "install-all:admin": "cd admin && npm install",
-    "install-all:client": "cd client && npm install --legacy-peer-deps",
+    "install-all:client": "cd client && npm install",
     "install-all:server": "cd server && npm install",
     "install-all:shared": "cd shared && npm install",
     "install-all:worker": "cd worker && npm install",
